[gd_scene load_steps=14 format=3 uid="uid://pifmvnxgbu1u"]

[ext_resource type="Texture2D" uid="uid://dabd5wqyt8ofl" path="res://Assets/Tiles/bossmissle.png" id="1_1vhmc"]
[ext_resource type="Script" path="res://Scenes/Enemies/Level 1 Boss/boss_missle.gd" id="1_6ullw"]
[ext_resource type="Texture2D" uid="uid://dvtcygh0tyxyd" path="res://Assets/Tiles/missleexplosion.png" id="3_meqtc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ckvqk"]
size = Vector2(36, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_57yvn"]
atlas = ExtResource("1_1vhmc")
region = Rect2(0, 0, 12, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2l8f"]
atlas = ExtResource("1_1vhmc")
region = Rect2(0, 8, 12, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_vfhh1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_57yvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2l8f")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_qm3re"]
atlas = ExtResource("3_meqtc")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_73fcc"]
atlas = ExtResource("3_meqtc")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_sq64d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qm3re")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73fcc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_o3iij"]
resource_name = "explode"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Missle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1, 0, 1, 0, 1]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Explosion:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_j0r1t"]
resource_name = "flicker"
length = 0.1
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Missle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vvqgs"]
_data = {
"explode": SubResource("Animation_o3iij"),
"flicker": SubResource("Animation_j0r1t")
}

[node name="BossMissle" type="Area2D"]
texture_filter = 1
script = ExtResource("1_6ullw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ckvqk")

[node name="Missle" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_vfhh1")
frame = 1

[node name="Explosion" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_sq64d")

[node name="MissleAnims" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vvqgs")
}
autoplay = "flicker"

[node name="Despawntimer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Despawntimer" to="." method="_on_despawntimer_timeout"]
